hphp/test/zend/bad/ext/gd/tests/gd_info_variation1.php
<?php
/* Prototype  : array gd_info()
 * Description: Retrieve information about the currently installed GD library
 * Source code: ext/gd/gd.c
 */

echo "*** Testing gd_info() : variation ***\n";

var_dump(gd_info());
?>
===DONE===